# QUICC-STModel-C

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  PastClimate70-00.csv  README.md  RepDom_clim.sh  climate_test.csv  climate_test_dom.csv  climate_test_isa.csv  coexistence.R  dompars.txt  dompars2.txt  dompars3.txt  fourstate_display.py  grid.c  grid.h  grid_cell.c  grid_cell.h  grid_init.c  grid_init.h  io_test.csv  isapars.txt  isapars_m3.txt  main.c  makefile  makefile_manual.mk  model_replicates_dom.sh  model_replicates_equilibrium.sh  model_replicates_future.sh  model_replicates_isa.sh  pars  plot_model.r  plot_model_tr.r  plot_replicates.r  run_equilibrium.sh  stm  test_model.sh  test_params.txt  tkDisplay.py
dataAnalyze/: Import_analyze_simus.R  compute_prop.R  explo_clim_space.R  explo_parsDom.R  import_simu.R  import_step.R
dataPrep/: R_data_preparation.R  explo_spacePars.R  extract_int_yrs_pastClimate.R  format_main.R  format_pastClimdata_main.R
dataPrepClim/: extract_int_yrs_pastClimate.R  format_futureClimate.R  format_pastClimdata_main.R
includes/: climate.h  grid.h  grid_cell.h  io.h
old_unit_test/: grid_cell_test.c  grid_test.c
old_unit_tests/: test  test.c  test.h
src/: climate.c  grid.c  grid_cell.c  io.c  main.c
test/: grid_cell_test  grid_cell_test.c  grid_test.c  test.c  test.h
tests/: cl_test.c  climate_test.c  gc_test_alloc.c  gc_test_neighbors.c  gc_test_new_state.c  gc_test_trans_prob.c  gr_test_alloc.c  gr_test_neighbors.c  gr_test_new_state.c  gr_test_prevalence.c  gr_test_trans_prob.c  grid_cell_test.c  grid_test.c  test.c  test_gr_make_grid.c
